[package]
name = "whos-that"
version = "0.1.0"
description = "Who's That Pokemon? For the terminal"
authors = ["Caroline Hohner <crhohner@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
color-eyre = "0.6.5"
crossterm = "0.29.0"
log = "0.4.29"
rand = "0.10.0"
ratatui = "0.30.0"
reqwest = {version ="0.13.2", features = ["blocking", "json"]}
serde = {version ="1.0.228",  features = ["derive"]}
serde_json = "1.0.149"
tui-logger = "0.18.1"


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
